# jivanu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  codecov.yml  deny.toml
.github/workflows/: release.yml
benches/: benchmarks.rs
docs/adr/: 001-hisab-ode-integration.md  002-feature-gated-deps.md  003-bridge-module-pattern.md  README.md
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh  coverage-check.sh  version-bump.sh
src/: biofilm.rs  bridge.rs  epidemiology.rs  error.rs  genetics.rs  growth.rs  lib.rs  metabolism.rs  pharmacokinetics.rs  resistance.rs  stochastic.rs  taxonomy.rs
tests/: integration.rs  validation.rs
